# PolyVoice.AI

./: .gitignore  LICENSE  README.md  package-lock.json
backend/: app.py  fastapi_app.py  pyproject.toml  run.py  test_speaking_coach.py
backend/app/: __init__.py  api.py  config.py  llm.py  main.py  speaking_coach.py  speech_recognition.py  speech_synthesis.py
backend/app/agents/: __init__.py  browser_agent.py  diagnosis_agents.py
backend/app/llm/: __init__.py  base.py  deepseek.py  openaiLLM.py
backend/app/prompt/: browser.py  coach.py  diagnosis.py  diagnosis_extract.py
backend/config/: config.example.toml  config.toml
backend/scripts/: README.md  download_models.py  download_tts_model.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/assets/css/: common.css
frontend/src/components/: AdvancedDiagnosis.tsx
frontend/src/components/footer/: index.tsx  style.ts
frontend/src/components/headers/: index.tsx  style.ts
frontend/src/components/main/: index.tsx  style.ts
frontend/src/pages/chat/: index.tsx  style.ts
frontend/src/pages/homePage/: index.tsx  style.ts
frontend/src/services/: api.ts
frontend/src/styles/: App.styles.ts
