[project]
name = "polyvoice-backend"
version = "0.1.0"
description = "PolyVoice Backend API"
authors = [
    {name = "Jax"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "browser-use (>=0.1.40,<0.2.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "googlesearch-python (>=1.3.0,<2.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "openai (>=1.12.0,<2.0.0)",
    "TTS (>=0.22.0,<0.23.0)",
    "torch (>=2.2.0,<3.0.0)",
    "torchaudio (>=2.2.0,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "aiofiles (>=23.2.1,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
